<resources>
    <string name="app_name">Friend Spotter</string>
    <string name="google_api_key">AIzaSyBpe0Q2Y0w2hkvDdj2_i5H3YieE3rW62CI</string>

    <string name="shared_preferences_user">shared_pref_user</string>
    <string name="formula_empty_error">Cannot be empty</string>
    <string name="formula_password_error">Password must match</string>

    <!-- MENU TABS !-->
    <string name="drawer_spotter">Spotter</string>
    <string name="drawer_people">People</string>
    <string name="drawer_events">Events</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>

    <string name="email_label_text">E-mail</string>
    <string name="password_label_text">Password</string>
    <string name="re_password_label_text">Confirm Password</string>
    <string name="login_label_text">Login</string>

    <string name="new_register_button">Register</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="shared_preferences_gcm_key">gcm_key</string>
    <string name="shared_preferences_gcm_registration_id">gcm_registration_id</string>
    <string name="shared_preferences_gcm_app_version">gcm_app_version</string>

    <string name="loading_weather">Loading current weather&#8230;</string>
</resources>
