<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_spotter"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_spotter" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_events" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_friends" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_profile" />
    </group>

</menu>
